# mek_lilrobot

./: .gitignore  .gitmodules  pkgs.txt
install/mek_lilrobot/share/ament_index/resource_index/parent_prefix_path/: mek_lilrobot
install/mek_lilrobot/share/mek_lilrobot/: local_setup.bash  local_setup.dsv  package.bash  package.dsv  package.ps1
install/mek_lilrobot/share/mek_lilrobot/cmake/: mek_lilrobotConfig-version.cmake
install/mek_lilrobot/share/mek_lilrobot/description/: gazebo_control.xacro  inertial_macros.xacro  robot.urdf.xacro  robot_core.xacro
install/mek_lilrobot/share/mek_lilrobot/launch/: launch_sim.launch.py  rsp.launch.py
install_/: local_setup.sh  setup.sh
install_/mek_lilrobot/share/ament_index/resource_index/package_run_dependencies/: mek_lilrobot
install_/mek_lilrobot/share/mek_lilrobot/: local_setup.sh  local_setup.zsh  package.sh  package.xml  package.zsh
install_/mek_lilrobot/share/mek_lilrobot/cmake/: mek_lilrobotConfig.cmake
install_/mek_lilrobot/share/mek_lilrobot/environment/: ament_prefix_path.dsv  path.dsv
install_/mek_lilrobot/share/mek_lilrobot/launch/: listener.launch.py  talker.launch.py
log/: latest_build  latest_info  latest_list
src/mek_drive/: CMakeLists.txt  minimal_action_server.cpp  package.xml
src/mek_drive_interfaces/: CMakeLists.txt  package.xml
src/mek_drive_interfaces/action/: Drive.action
src/mek_lilrobot/: CMakeLists.txt  package.xml
src/mek_lilrobot/config/: controllers.yaml  nav2.yaml  sim_controllers.yaml  twist_mux.yaml
src/mek_lilrobot/description/: gazebo_control.xacro  gripper_left_collision.stl  gripper_left_visual.stl  gripper_right_collision.stl  gripper_right_visual.stl  mek_chassis.stl  mek_chassis_collision.stl  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
src/mek_lilrobot/launch/: launch_robot.launch.py  launch_sim.launch.py  rsp.launch.py  sim_nav.launch.py
src/mek_lilrobot/src/: MapOdomTfPub.cpp  Robot.cpp  robot.cpp
src/mek_lilrobot/worlds/: arena.sdf  map.yaml
src/mek_lilrobot_interfaces/: CMakeLists.txt  package.xml
src/mek_lilrobot_interfaces/action/: DoMission.action
src/nav2_regulated_pure_pursuit_controller/src/: regulated_pure_pursuit_controller.cpp
src/object_tracker/: package.xml  setup.py
src/object_tracker/object_tracker/: object_tracker.py  vision.py
src/range_sensor_broadcaster/: CMakeLists.txt  package.xml  range_sensor_broadcaster.xml
src/range_sensor_broadcaster/include/range_sensor_broadcaster/: range_sensor_broadcaster.hpp
src/range_sensor_broadcaster/src/: range_sensor_broadcaster.cpp
