<?xml version="1.0"?>
<package format="2">
  <name>mek_drive</name>
  <version>0.0.1</version>
  <description>Simple turning and driving actions for the mek606g robot</description>
  <maintainer email="fmt1@hi.is">Fridfinnur M</maintainer>
  <license>All rights reserved</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>mek_drive_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>  
</package>
